fixed flickering panel bug for case studies in safari

--- a/app/less/pages/showcase/media-queries-showcase-work.less
+++ b/app/less/pages/showcase/media-queries-showcase-work.less
@@ -91,6 +91,11 @@
 			padding-top:0;
 		}
 	}
+	.wk-box {
+		&:not(:last-child) {
+            border-bottom:1px solid #fff;
+        }
+	}
 	nav > div.wk-show-work {
         z-index: 1000;
         opacity: 1;
