--- a/app/less/pages/showcase/showcase-work.less
+++ b/app/less/pages/showcase/showcase-work.less
@@ -461,9 +461,6 @@ section.wk-expand {
     section:not(.wk-expand) {
         .wk-box {
             background:rgba(231, 76, 60, 0.9);
-            &:not(:last-child) {
-                border-bottom:1px solid #fff;
-            }
             h3, p {
                 opacity:1;
                 -webkit-transform: translateY(-20px);
