--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3691,13 +3691,8 @@ div.cs-panel-items > div {
   background: white;
   z-index: 0;
   opacity: 0;
-  -webkit-transform: translateY(0);
-  -moz-transform: translateY(0);
-  -ms-transform: translateY(0);
-  transform: translateY(0);
-  -webkit-transition: -webkit-transform 0.5s ease-in-out, opacity 0s linear 0.5s;
-  -moz-transition: -moz-transform 0.5s ease-in-out, opacity 0s linear 0.5s;
-  transition: transform 0.5s ease-in-out, opacity 0s linear 0.5s;
+  top: 100%;
+  transition: top 0.5s ease-in-out, opacity 0s linear 0.5s;
 }
 div.cs-panel-items > div > div {
   margin-left: -2rem;
@@ -3828,23 +3823,13 @@ div.cs-panel-items nav span {
 div.cs-panel-items > div.cs-show-work {
   z-index: 1000;
   opacity: 1;
-  -webkit-transform: translateY(-100%);
-  -moz-transform: translateY(-100%);
-  -ms-transform: translateY(-100%);
-  transform: translateY(-100%);
-  -webkit-transition: -webkit-transform 0.5s ease-in-out;
-  -moz-transition: -moz-transform 0.5s ease-in-out;
-  transition: transform 0.5s ease-in-out;
+  top: 0;
+  transition: top 0.5s ease-in-out;
 }
 div.cs-panel-items > div.cs-hide-current-work {
   opacity: 0;
-  -webkit-transform: translateY(-100%) scale(0.5);
-  -moz-transform: translateY(-100%) scale(0.5);
-  -ms-transform: translateY(-100%) scale(0.5);
-  transform: translateY(-100%) scale(0.5);
-  -webkit-transition: -webkit-transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
-  -moz-transition: -moz-transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
-  transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+  top: 0;
+  transition: top 0.5s ease-in-out, opacity 0.5s ease-in-out;
   z-index: 0;
 }
 div.cs-panel-items.cs-panel-items-show nav {
@@ -4348,9 +4333,6 @@ section.wk-expand .wk-box {
 .touch section:not(.wk-expand) .wk-box {
   background: rgba(231, 76, 60, 0.9);
 }
-.touch section:not(.wk-expand) .wk-box:not(:last-child) {
-  border-bottom: 1px solid #fff;
-}
 .touch section:not(.wk-expand) .wk-box h3,
 .touch section:not(.wk-expand) .wk-box p {
   opacity: 1;
@@ -4488,6 +4470,9 @@ div.wk-panel-items#wk-panel-work-items p {
   }
   .wk-main .wk-content {
     padding-top: 0;
+  }
+  .wk-box:not(:last-child) {
+    border-bottom: 1px solid #fff;
   }
   nav > div.wk-show-work {
     z-index: 1000;
